fix: updated for spec change

--- a/js/client-templated/exported-class.ts.tmpl
+++ b/js/client-templated/exported-class.ts.tmpl
@@ -10,9 +10,9 @@ export default class <%= className %> {
 
     this.rpc = jayson.Client[options.transport.type](options.transport);
   }
-  <% methodNames.forEach((methodName, i) => { %>
-  <%= methodName %>(...params: Array<any>): jayson.JSONRPCRequest {
-    return this.rpc.request('<%= methodName %>', params);
+  <% methods.forEach((method, i) => { %>
+  <%= method.name %>(...params: Array<any>): jayson.JSONRPCRequest {
+    return this.rpc.request('<%= method.name %>', params);
   }
   <% }) %>
 };
