--- a/js/client-templated/exported-class.ts.tmpl
+++ b/js/client-templated/exported-class.ts.tmpl
@@ -1,18 +1,18 @@
-import * as jayson from 'jayson';
+import * as jayson from "jayson/promise";
 
 export default class <%= className %> {
-  rpc: jayson.Client
+  rpc: jayson.Client;
 
   constructor(options) {
     if (options.transport === undefined || options.transport.type === undefined) {
       throw new Error("Invalid constructor params");
     }
 
-    this.rpc = jayson.Client[options.transport.type](options.transport);
+    this.rpc = jayson.client[options.transport.type](options.transport);
   }
   <% methods.forEach((method, i) => { %>
   <%= method.name %>(...params: Array<any>): jayson.JSONRPCRequest {
-    return this.rpc.request('<%= method.name %>', params);
+    return this.rpc.request("<%= method.name %>", params);
   }
   <% }) %>
-};
+}
